# Games-Homeworks

./: .gitignore  LICENSE  README.md
games101/0/: CMakeLists.txt  build.ps1  main.cpp
games101/1/: CMakeLists.txt  build.ps1  main.cpp
games101/2/: CMakeLists.txt  main.cpp  rasterizer.cpp
games101/3/: CMakeLists.txt  Texture.hpp  main.cpp  rasterizer.cpp
games101/4/: CMakeLists.txt  build.ps1  main.cpp
games101/5/: Renderer.cpp  Triangle.hpp
games101/6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp  build.ps1
games101/7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
games101/8/: CMakeLists.txt  build.ps1
games101/8/src/: getopt.hpp  main.cpp  rope.cpp
games101/PathTracingCuda/: BVH.cpp  BVH.cu  BVH.cuh  BVH.hpp  Bounds3.cuh  Bounds3.hpp  CMakeLists.txt  CudaMemory.cuh  Intersection.cuh  Intersection.hpp  Light.cuh  Light.hpp  Material.cuh  Material.hpp  OBJ_Loader.cuh  OBJ_Loader.hpp  Object.cuh  Object.hpp  Ray.cuh  Ray.hpp  Renderer.cuh  Renderer.hpp  Scene.cuh  Scene.hpp  Triangle.cuh  Triangle.hpp  Vector.cuh  Vector.hpp  build.ps1  global.cuh  global.hpp  main.cpp  main.cu
games101/PathTracingCuda/cuda/: Renderer.cu
games202/0/: index.html
games202/0/src/: engine.js
games202/0/src/loads/: loadOBJ.js
games202/0/src/materials/: PhongMaterial.js
games202/0/src/shaders/: InternalShader.js
games202/1/: index.html
games202/1/src/: engine.js
games202/1/src/lights/: DirectionalLight.js
games202/1/src/shaders/phongShader/: phongFragment.glsl
games202/2/: index.html
games202/2/src/: engine.js
games202/2/src/loads/: loadOBJ.js
games202/2/src/renderers/: WebGLRenderer.js
games202/3/: index.html
games202/3/src/: engine.js
games202/4/: index.html
games202/4/lut-gen/: CMakeLists.txt  Eavg_MC.cpp
games202/4/src/: engine.js
games202/5/: CMakeLists.txt
third/OpenCV/include/opencv2/: cvconfig.h
third/freetype/lib/: freetyped.lib
third/nori/lib/: Half.lib  Iex.lib  IexMath.lib  IlmThread.lib  Imath.lib  tbb_static.lib  zlibstatic.lib
(+14 files in other folders)
